--- a/style.css
+++ b/style.css
@@ -173,12 +173,15 @@ body > script {display: none !important;}
 
 
 /* END RESET */
-html{font-size: 62.5%;overflow-y: scroll;}
+html{ font-size: 62.5%;overflow-y: hidden; }
 body{
-	background:#eee;
+	background:#e6e6e6;
 	width:100%;
 	font-family:'Molengo', sans-serif;
 	font-size:1.4rem;
+	-webkit-font-smoothing: antialiased;
+	text-rendering: optimizeLegibility;
+	-moz-osx-font-smoothing: grayscale;
 }
 h1,h2,h3,h4,h5{
 	font-family:'Goudy Bookletter 1911', serif;
@@ -232,57 +235,116 @@ p{
 	margin-top:5%;
 }
 /* HEADER */
-header{
+#wrapper>header{
 	min-width:320px;
+	max-width:960px;
 	text-align:center;
 	margin:0 auto;
+	overflow: hidden;
+	clear: both;
 }
 #branding{
-	padding:20px 0;
-	background: #fff;
-	border-bottom: 5px solid #507cb4;
+	width:320px;
+	height: 100px;
+	float: left;
+	background: #fafafa;
+	border-bottom: 5px solid #729add;
 	box-shadow: 0px 10px 50px rgba(0,0,0,0.1);
 }
-#patcorn_logo{
-	/*width:;
-	height:;*/
-	display:inline-block;
-	vertical-align:middle;
-	margin-right:6px;
-}
-#site-title{
-	display:inline-block;
-	vertical-align:middle;
+#branding>a{
+	display: block;
+	overflow: hidden;
+	height: 100px;
+	padding-top:30px;
 }
 #site-title h1{
 	font-family:'Molengo', sans-serif;
 	margin:0;
     font-size: 2.45rem;
 	text-decoration:none;
-	color: #507cb4;
+	color: #729add;
 	text-transform: uppercase;
 	letter-spacing: 0.25em;
 	line-height: 2rem;
 }
+#site-title h1:before{
+	content:"g";
+	text-transform: lowercase;
+	font-family: 'PatCorn Icon';
+}
 #site-description{
 	font-size:1.4rem;
-	color:#aaa;
-	text-align: left;
+	color:#969696;
+	text-align: center;
 	padding-left: 1px;
 }
-header>nav{
-	max-width:1032px;
+
+#wrapper>header>nav{
+	display: block;
+	max-width:640px;
 	min-width:320px;
 	text-align:left;
-	margin:0 auto;
+	float: right;
+	margin:0;
 }
-header>nav div{
+#wrapper>header>nav div{
 	display:inline-block;
 	vertical-align:top;
 }
-#search{
-
+.head_social,.head_social>li{
+	overflow: hidden;
+	display: inline-block;
+	float: left;
 }
+.head_social>li>a,#search>a{
+	padding-top: 14px;
+	cursor: pointer;
+}
+#search,.head_social>li>a,#search>a{
+	width:40px;
+	height:40px;
+	display: inline-block;
+	color: white;
+	text-align: center;
+}
+#search,.head_social{
+	float: right;
+	height: 40px;
+	position: relative;
+}
+#search form.searchform {
+	width: 0px;
+	height: 40px;
+	position: absolute;
+	top: 0;
+	right: 40px;
+	overflow: hidden;
+
+	transition:width .3s ease;
+	-ms-transition:width .3s ease;
+	-moz-transition:width .3s ease;
+	-webkit-transition:width .3s ease;
+}
+#search form.searchform input{
+	height: 40px;
+}
+#search{width: 320px;text-align: right;}
+#search>a{
+	background:#c8c8c8;
+}
+#search:hover form.searchform{
+	width: 320px;
+}
+#btn_twitter{
+	background: #55acee;
+}
+#btn_fb{
+	background: #3B5998;
+}
+#btn_folio{
+	background: #656565;
+}
+
 input[type=text]{
 	min-width:200px;
 	border:none;
@@ -362,54 +424,37 @@ input[type=submit]:hover{
 }
 /* Menu */
 .menu-menu-container{
-	margin-top: -29px;
 	/*margin-bottom: 40px;*/
 	display: block;
+	overflow: hidden;
+	max-width: 640px;
+	min-width: 320px;
 }
 #menu-menu{
 	overflow:hidden;
+	height: 60px;
 }
 #menu-menu>li{
-	/*
 	overflow: hidden;
+	float: right;
+	/*
 	width: 160px;
 	display: block;
 	float: right;
 	*/
 }
 #menu-menu>li>a{
-	position:relative;
-	width:155px;
+	width:160px;
+	height: 60px;
 	display:block;
-	float:right;
-	padding: 5px 25px;
-	color:#666;
-	background: #ddd;
+	overflow: hidden;
+	color:#646464;
+	background: #f0f0f0;
 	font-size: 1.7rem;
-	line-height: 2.4rem;
-	text-transform:uppercase;
 	text-align:center;
-	letter-spacing: 0.02em;
-
-	-webkit-transition:all 0.07s ease;
-	-moz-transition:all 0.07s ease;
-	-o-transition:all 0.07s ease;
-	transition:all 0.07s ease;
+	padding-top: 20px;
+	border-bottom: 5px solid #c8c8c8;
 }
-/*
-#menu-menu>li>a:after{
-	content:'';
-	display:block;
-	position:absolute;
-	top:0;
-	left:100%;
-	width: 0px;
-	height: 0px;
-	border-style: solid;
-	border-width: 30px 30px 0 0;
-	border-color: #dddddd transparent transparent transparent;
-}
-*/
 #menu-menu>li>a:hover{
 	background: #fff;
 	color:black;
@@ -530,26 +575,12 @@ h2>a{
 	border-right: 5px solid lightgray;
 }
 .article_lien_a{
+	position:absolute;
+	top:0; left:0;
 	background:transparent;
 	display: block;
-	width: 100%;
-	height: 100%;
-}
-.article_lien_a>p {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	font-size: 8rem;
-	margin-top: -4rem;
-	margin-left: -4rem;
-	color: rgba(255,255,255,0);
-	transition:color 0.3s ease;
-	-webkit-transition:color 0.3s ease;
-	-ms-transition:color 0.3s ease;
-	-moz-transition:color 0.3s ease;
-}
-.article_lien_a>p:before{
-	content:'►';
+	width: 100% !important;
+	height: 100% !important;
 }
 .article_lien_a:hover p{ color: rgba(255,255,255,0.4);}
 .article_lien_a:hover{
@@ -630,11 +661,46 @@ h2>a{
 }
 #content{
 	display:inline-block;
-	width:1032px;
+	width:100%;
 	min-width:320px;
 	margin:0 auto;
 	text-align:left;
 }
+#content article{
+	display:block;
+	width:25%;
+	height:0;
+	padding-bottom:14.0625%;
+	float: left;
+}
+@media screen and (max-width: 1600px){
+	#content article{
+		display:block;
+		width:33.3333333333333333333%;
+		height:0;
+		padding-bottom:18.75%;
+		float: left;
+	}
+}
+@media screen and (max-width: 1280px){
+	#content article{
+		display:block;
+		width:50%;
+		height:0;
+		padding-bottom:28.125%;
+		float: left;
+	}
+}
+@media screen and (max-width: 640px){
+	#content article{
+		display:block;
+		width:100%;
+		height:0;
+		padding-bottom:56.25%;
+		float: left;
+	}
+}
+.videos_aleatoire>ul{display: none;}
 /*
 .home #content,
 .search #content,
@@ -881,6 +947,7 @@ iframe{
 .category .article-content,
 .archive .article-content{
 	position:absolute;
+	display: none;
 	top:0;
 	background:rgba(255,255,255,0.1);
 	background:rgba(0,0,0,0.8);
@@ -1280,9 +1347,9 @@ mark{
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------------------------------------------------------------------------
 */
+/*
 @media screen and (max-width: 1445px){
 	aside{
-		/*display:block;*/
 		margin:0 auto;
 		margin-top:40px;
 		margin-left:0;
@@ -1389,7 +1456,7 @@ mark{
 		margin-bottom: 6px;
 	}
 }
-
+*/
 
 
 
