--- a/style.css
+++ b/style.css
@@ -232,22 +232,25 @@ h2{
 	color: #333; 
 	padding: 12px 0;	
 }
-h3{	font-size:1.6rem;	}
-h4{	font-size:1.4rem;	}
-h5{	font-size:1.2rem;	}
+h3{	font-size:1.6rem; text-shadow: 0em 0.06em 0 #f0f0f0;	}
+h4{	font-size:1.4rem; text-shadow: 0em 0.06em 0 #f0f0f0;	}
+h5{	font-size:1.2rem; text-shadow: 0em 0.06em 0 #f0f0f0;	}
 a, a:visited, a:active{
 	text-decoration:none;
 	color:#729add;
+	text-shadow: 0em 0.06em 0 #f0f0f0;
 }
 a:hover{
-	color:#666;
+	color:#323232;
 }
 p{
 	color:#666;
 	font-size:1.8rem;
+	text-shadow: 0em 0.06em 0 #f0f0f0;
 }
 blockquote{
 	quotes: "«\00A0" "\00A0»";
+	text-shadow: 0em 0.06em 0 #f0f0f0;
 }
 blockquote::before {
     content: open-quote;
@@ -350,6 +353,7 @@ blockquote::after {
 	font-weight: normal;
 	font-variant: normal;
 	text-transform: none;
+	text-shadow:none;
 	line-height: 1;
 	-webkit-text-stroke-width: 0px;
 }
@@ -616,9 +620,9 @@ input[type=submit]:hover{
 	-moz-box-sizing:border-box;
 	padding: 3px 12px;
 	line-height: 1.8em;
-	background: rgba(0,0,0,0.025);
+	background: rgba(0,0,0,0.02);
 	font-size: 1.3rem;
-	color: #666;
+	color: #646464;
 	-webkit-transition:all 0.1s ease;
 	-ms-transition:all 0.1s ease;
 	-moz-transition:all 0.1s ease;
@@ -696,24 +700,27 @@ h1>a{
 	left: 1.0rem;
 	bottom: 0.6rem;
 	z-index: 15;
-	opacity: 0.3;
-	filter: alpha(opacity=30);
+	opacity: 0.4;
+	filter: alpha(opacity=40);
 	font-size: 32px;
-	color: #111;
+	color: #f1f1f1;
 	padding: 6px;
 }
 .type_icon::before{
 
 }
 .single-post .entry-content{
-
+	width: 65%;
+	float: left;
+	background: #fafafa;
+	border-bottom: 5px solid #c8c8c8;
 }
 .entry-title{
 	font-family: 'Raleway', sans-serif;
     font-size: 3rem;
 	color:#507CB4;
 }
-.single-post .entry-title,.page .entry-title{
+.page .entry-title{
 	margin:0;
 	margin-top:40px;
 	line-height:2rem;
@@ -727,7 +734,7 @@ h1>a{
 	font-size: 2.4rem;
 	font-weight:100;
 }
-.single-post .entry-content p, .page .entry-content p,.equipe p{
+.page .entry-content p{
 	box-sizing: border-box;
 	font-size: 1.8rem;
 	background-color: rgba(255, 255, 255, 0.25);
@@ -736,15 +743,113 @@ h1>a{
 	line-height: 3.4rem;
 	text-align:justify;
 	color: black;
-	margin-top: 192px;
 	transition: margin-top 0.5s ease;
 	-ms-transition: margin-top 0.5s ease;
 	-moz-transition: margin-top 0.5s ease;
 	-webkit-transition: margin-top 0.5s ease;
 }
-.noMarginTop{
-	margin-top:0 !important;
+#content-single{
+	max-width: 1280px;
+	min-width: 320px;
+	margin:0 auto;
 }
+#content-single>aside{
+	width: 35%;
+}
+#content-single>aside img{
+	opacity: 0.8;
+	filter: alpha(opacity=80);
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+}
+#content-single>aside .cat-links{
+	background: #fafafa;
+	width: 100%;
+	text-align: center;
+	padding: 10px 0;
+}
+#content-single>aside .cat-links a{
+	float: none;
+}
+.equipe{
+	width: 100%;
+	background: #333;
+	padding: 5% 10% 10% 10%;
+}
+.equipe p{
+	color:#f1f1f1;
+	text-shadow:none;
+	font-size: 1.6rem;
+	line-height: 2.1rem;
+	letter-spacing: 0.05em;
+}
+.equipe span{
+	display: block;
+	float: left;
+	font-size: 1.4rem;
+	line-height: 2.8rem;
+	color:#729add;
+	margin-right: 5px;
+}
+.equipe h5{
+	font-size: 1.5rem;
+	line-height: 2.8rem;
+	font-family: 'Raleway', sans-serif;
+	text-shadow:none;
+	margin-top: 20px;
+	color: #729add;
+}
+.equipe h3{
+	font-size: 1.6rem;
+	line-height: 3.2rem;
+	font-family: 'Raleway', sans-serif;
+	text-align:center;
+	text-transform:uppercase;
+	color:#969696;
+	letter-spacing: 0.1em;
+	text-shadow:none;
+}
+#content-single>header{
+	width: 100%;
+	height: 30px;
+	margin-bottom: 30px;
+}
+.single-title{
+	width: 60%;
+	float: left;
+	height: 30px;
+}
+#content-single>header .edit-link{
+	vertical-align: top;
+	float: right;
+	text-align: center;
+}
+#content-single>header a.post-edit-link{
+	display: block;
+	width:120px;
+	height: 30px;
+	background: #c8c8c8;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 300;
+	font-size: 1.4rem;
+	line-height: 30px;
+}
+#content-single>header a.post-edit-link:hover{
+	background: #729add;
+	color: #fff;
+}
+
+#content-single>header hr{
+	width:20%;
+	color:#969696;
+	background: #969696;
+	padding: 0;
+	opacity: 0.7;
+	margin: 0.5% 0;
+}
+
 .home .type-post,
 .search .type-post,
 .category .type-post,
@@ -935,10 +1040,7 @@ iframe{
 
 	padding: 2% 6% 6% 6%;
 }
-.entry-date{
-	display: none;
-}
-h2.entry-title>a{
+h2.entry-title>a, #content-single>header h1{
 	display: inline-block;
 	width: 100%;
 	color: #646464;
@@ -948,6 +1050,7 @@ h2.entry-title>a{
 	line-height: 2.6rem;
 	font-weight: 100;
 	letter-spacing: 0.04em;
+	margin: 0;
 }
 .article-content hr{
 	width:50%;
@@ -1048,7 +1151,7 @@ h2.entry-title>a{
 	width: 40px;
 	height: 40px;
 	vertical-align: bottom;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	
 	-webkit-transition: all 0.25s ease;
 	-moz-transition: all 0.25s ease;
@@ -1081,6 +1184,47 @@ h2.entry-title>a{
 	text-transform:uppercase;
 	/*font-size: 2.0rem !important;*/
 }
+
+[data-tip] {
+	position: relative;
+	z-index: 20000;
+	text-decoration: none;
+	border: 0;
+}
+
+[data-tip]:hover:after {
+	background: #333;
+	color: #ddd;
+	font-family: "Open Sans",sans-serif;
+	text-align: center;
+	content: attr(data-tip);
+	font-size: 1.4rem;
+	text-shadow:none;
+	line-height: 2.8rem;
+	left: 0;
+	margin-left: 0px;
+	padding: 10px 20px;
+	position: absolute;
+	bottom: 45px;
+	z-index: 2000;
+	z-index: 1;
+	/*width: 180px;*/
+}
+
+[data-tip]:hover:before {
+	content: "";
+	left: 18px;
+	position: absolute;
+	bottom: 35px;
+	z-index: 2000;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 10px 10px 0;
+	border-color: #333 transparent transparent;
+	margin-left: -8px;
+}
+
 .home .cat-links>a,
 .search .cat-links>a,
 .category .cat-links>a,
@@ -1112,11 +1256,11 @@ h2.entry-title>a{
 	transition:all 0.5s ease;
 }
 .archive-meta{
-	padding: 12px 0 36px 0;
+	display: inline-block;
+	margin-left: 5%;
 }
 /* SINGLE */
 .la_video{
-	margin: 30px 0;
 	width:100%;
 	height: 0;
 	padding-bottom:56.25%;
@@ -1127,33 +1271,6 @@ h2.entry-title>a{
 	width: 100% !important; height: 100% !important;
 	position:absolute;
 	top:0; left:0;
-}
-#infos_bloc{
-	padding: 24px;
-	margin: 0 auto;
-	margin-top: 0;
-	margin-bottom: 24px;
-	background: rgba(0,0,0,0.9);
-	margin-left: 24px;
-	margin-right: 6%;
-	overflow: hidden;
-}
-.equipe_encas{
-	width: 33%;
-	display: inline-block;
-	float: left;
-	padding: 12px 24px;
-}
-.equipe_encas p{
-	margin:0;
-	padding:0;
-	color: #ddd;
-	background: transparent;
-	text-align: left;
-}
-.equipe h5{
-	font-size: 1.6rem;
-	font-family: 'Raleway', sans-serif;
 }
 .single-post #content>h3{
 	margin-top:43px;
@@ -1307,18 +1424,6 @@ aside{
 	width:auto;
 	margin:0 auto;
 }
-.widget-title,.equipe h3{
-	margin:0 auto;
-	font-size: 1.6rem;
-	line-height: 6rem;
-	font-family: 'Raleway', sans-serif;
-	/*background:rgba(0,0,0,0.05);*/
-	text-align:center;
-	text-transform:uppercase;
-	color:#666;
-	letter-spacing: 0.1em;
-	/*box-shadow: 0px 10px 50px rgba(0,0,0,0.1);*/
-}
 .cat-item{
 	width:30%;
 	float:left;
@@ -1350,8 +1455,7 @@ aside{
 	text-align: center;
 	border-top: 5px solid #c8c8c8;
 	background:#f0f0f0;
-	padding: 40px 0;
-
+	padding: 60px 0;
 }
 #wrapper>footer section{
 	width: 25%;
@@ -1359,33 +1463,43 @@ aside{
 	float: left;
 	padding: 0 5%;
 }
+#wrapper>footer span{
+	font-size: 3.2rem;
+	color: #969696;
+	line-height: 3.2rem;
+}
 #wrapper>footer p{
 	font-size:1.4rem;
 	color:#888;
+	line-height: 2.1rem;
 }
-#wrapper>footer a{
-	font-size:1.4rem;
-	color:#888;
+#wrapper>footer h4{
+	font-size: 2.4rem;
+	color: #729add;
+	line-height: 4.8rem;
 }
-#wrapper>footer a:hover{
-	color:#333;
+.the_lien{
+	font-size: 1.4rem;
+	color: #888;
+	background: white;
+	padding: 5px 10px;
+	line-height: 4.8rem;
+}
+.the_lien:hover{
+	color:white;
+	background: #729add;
 }
 #copyright{
 	text-align:center;
 	width:100%;
-	display:block;
+	display:inline-block;
 	vertical-align:middle;
-	margin-top:140px;
+	margin-top:60px;
 }
 /*			AUTRES			*/
 mark{
 	padding: 0px 4px !important;
 	background: rgba(0,0,0,0.2) !important;
-}
-.single-post .edit-link{
-	float: right;
-	margin-right: 100px;
-	margin-top: 20px;
 }
 .pagination {
 	display: block;
@@ -1405,7 +1519,7 @@ mark{
 	display: inline-block;
 	line-height: 3.2rem;
 	color: #969696;
-	font-family: "Open Sans";
+	font-family: "Open Sans", sans-serif;
 	font-size: 1.6rem;
 }
 .pagination>a:hover {
@@ -1417,6 +1531,7 @@ mark{
 }
 .pagination .current{
 	color:#323232;
+	border-top: 5px solid #969696;
 }
 .fiche_id_video {
 	position:relative;
@@ -1447,25 +1562,50 @@ mark{
 	font-size: 1.6rem;
 	width: 100%;
 }
-.random_btn{
-	display:block;
-	width:100%;
-	height:2.5em;
-	line-height:2.5em;
-	text-align:center;
-	background:#ddd;
-	font-size:1.8rem;
-	text-transform:uppercase;
-	color:#666 !important;
-	
-	transition:all 0.3s ease;
-	-o-transition:all 0.3s ease;
-	-moz-transition:all 0.3s ease;
-	-webkit-transition:all 0.3s ease;
+
+.no-results {
+	min-height: 100%;
+	display: block;
+	text-align: left;
+	padding: 60px 5%;
+	background: #333;
 }
-.random_btn:hover{
-	background:#507cb4;
-	color:white !important;
+.no-results span{
+	font-size: 6rem;
+	color: #969696;
+	float: left;
+	margin: 20px;
+}
+.no-results h2{
+	line-height: 6rem;
+}
+.no-results p{
+	line-height: 2.8rem;
+	text-shadow:none;
+}
+.no-results form{
+	margin-top: 40px;
+}
+.daves-wordpress-live-search_result a{
+	color: #646464 !important;
+	font-size: 1.4rem !important;
+	font-weight: 300 !important;
+	padding-top: 5px;
+}
+.daves-wordpress-live-search_result{
+	border:none !important;
+	background: #f0f0f0 !important;
+	line-height: 2.1rem;
+	border-right: 5px solid #c8c8c8 !important;
+	font-family: 'Raleway Bold', sans-serif;
+	cursor: pointer;
+}
+.daves-wordpress-live-search_result:hover{
+	background: #fff !important;
+}
+.daves-wordpress-live-search_result img{
+	opacity: 0.7;
+	filter: alpha(opacity=70);
 }
 /*
 --------------------------------------------------------------------------------------------------------------------------------------------------------
