--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ Template:       blankslate
 Version:        0.2.0
 */
 
-@import url("../blankslate/style.css");
+/* This comes from blankslate */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{font-size:100%;font:inherit;padding:0;border:0;margin:0;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}.clear{clear:both}
+.sticky{}.bypostauthor{}.wp-caption{}.wp-caption-text{}.gallery-caption{}.alignright{}.alignleft{}.aligncenter{}
+
 @font-face {
   font-family: 'Josefin Sans';
   font-style: normal;
@@ -224,13 +227,13 @@ h1{
 	font-size: 5rem;
 	line-height: 7.5rem;
 	color: black; 
-	margin:24px 0;	
+	margin:30px 0;	
 }
 h2{	
 	font-size: 3.6rem; 
 	/*line-height: 5.4rem;*/
 	color: #333; 
-	padding: 12px 0;	
+	padding: 20px 0;	
 }
 h3{	font-size:1.6rem; text-shadow: 0em 0.06em 0 #f0f0f0;	}
 h4{	font-size:1.4rem; text-shadow: 0em 0.06em 0 #f0f0f0;	}
@@ -748,9 +751,10 @@ h1>a{
 .page .entry-content p{
 	box-sizing: border-box;
 	font-size: 1.8rem;
-	background-color: rgba(255, 255, 255, 0.25);
-	padding: 12px 5% 12px 5%;
-	margin-bottom: 24px;
+	background-color: #fafafa;
+	border-bottom: 5px solid #c8c8c8;
+	padding: 30px 5% 30px 5%;
+	margin-bottom: 20px;
 	line-height: 3.4rem;
 	text-align:justify;
 	color: black;
@@ -810,7 +814,7 @@ h1>a{
 	padding: 5% 10% 10% 10%;
 }
 .equipe p{
-	color:#f1f1f1;
+	color:#969696;
 	text-shadow:none;
 	font-size: 1.6rem;
 	line-height: 2.1rem;
@@ -864,7 +868,7 @@ h1>a{
 	float: right;
 	text-align: center;
 }
-#content-single>header a.post-edit-link{
+a.post-edit-link{
 	display: block;
 	width:120px;
 	height: 30px;
@@ -874,13 +878,16 @@ h1>a{
 	font-weight: 300;
 	font-size: 1.4rem;
 	line-height: 30px;
+	text-align: center;
+	float: right;
+	margin: 5px 0 0 20px;
 }
-#content-single>header a.post-edit-link:hover{
+a.post-edit-link:hover{
 	background: #729add;
 	color: #fff;
 }
 
-#content-single>header hr{
+#content-single>header hr, #content-page header hr{
 	width:20%;
 	color:#969696;
 	background: #969696;
@@ -1010,6 +1017,13 @@ h1>a{
 	margin:0 auto;
 	text-align:left;
 	float: left;
+}
+#content-page{
+	max-width: 960px;
+	margin: 0 auto;
+}
+#content-page .entry-content{
+	margin-top: 40px;
 }
 #content article{
 	display:block;
@@ -1146,7 +1160,7 @@ iframe{
 
 	padding: 2% 6% 6% 6%;
 }
-h2.entry-title>a, #content-single>header h1{
+h2.entry-title>a, #content-single>header h1, #content-page header h1{
 	display: inline-block;
 	width: 100%;
 	color: #646464;
@@ -1216,7 +1230,7 @@ h2.entry-title>a, #content-single>header h1{
 	color:#646464;
 	font-size: 1.7rem;
 	line-height: 3.2rem;
-	padding: 1% 5%;	
+	padding: 10px 5%;	
 }
 .single-post .entry-content blockquote{
 	font-weight: 300;
@@ -1254,10 +1268,10 @@ h2.entry-title>a, #content-single>header h1{
 	font-size: 1.6rem;
 }
 .entry-content p a,.entry-summary p a{
-	color:#666;
+	/*color:#666;*/
 }
 .entry-content p a:hover,.entry-summary p a:hover{
-	color:#507cb4;
+	/*color:#507cb4;*/
 }
 /*
 .entry-content>a,.entry-summary>a{
@@ -1476,16 +1490,17 @@ h2.entry-title>a, #content-single>header h1{
 }
 /* A propos */
 #la_team{
-	margin-top:48px;
+	margin-top:40px;
 }
 .team_title{
-	margin-bottom:24px;
+	padding: 20px 0 40px 0;
 	text-align:center;
 }
-h2+.team_membre{	margin-right:6%; }
+
 .team_membre{
-	width:47%;
+	width:50%;
 	float:left;
+	padding: 0 3%;
 }
 .team_membre img{
 	width:200px;
@@ -1494,11 +1509,13 @@ h2+.team_membre{	margin-right:6%; }
 	background:black;
 }
 .team_membre>h4{
-	font-size: 2.0rem;
+	font-size: 3.0rem;
+	margin-top: 30px;
 }
 .team_membre>h5{
-	font-size: 1.2rem;
+	font-size: 2.2rem;
 	color: gray;
+	margin-top: 20px;
 }
 .team_membre div,.team_membre h4,.team_membre h5{text-align:center;}
 .team_membre div,.team_membre h5{margin-bottom:12px;}
