--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ h1,h2,h3,h4,h5{
 	font-family:'Josefin Sans', serif;
 }
 h1,h2,h4,h5{
-	color:#507cb4;
+	color:#729add;
 }
 h1{	
 	font-size: 5rem;
@@ -252,7 +252,7 @@ p{
 	text-shadow: 0em 0.06em 0 #f0f0f0;
 }
 blockquote{
-	quotes: "“ " " ”";
+	quotes: "- " " -";
 	text-shadow: 0em 0.06em 0 #f0f0f0;
 }
 blockquote::before {
@@ -273,12 +273,17 @@ blockquote::after {
 	z-index:99999999999;
 	text-align:center;
 }
-#loader>h2{
-	margin-top:20px;
+#loader>p{
+	margin-top:30px;
 	font-family:'Raleway',sans-serif;
+	text-transform: uppercase;
+	font-size: 1.8rem;
+	color: #969696;
 }
 #loader>img{
-	margin-top:5%;
+	margin-top:10%;
+	width: 64px;
+	height: 64px;
 }
 /* HEADER */
 #wrapper>header{
@@ -730,6 +735,9 @@ h1>a{
 	padding-top: 38%;
 	padding-bottom: 2%;
 }
+.single-post .une_serie .entry-content{
+	padding-top: 2%;
+}
 .entry-title{
     font-size: 3rem;
 	color:#646464;
@@ -752,17 +760,19 @@ h1>a{
 .page .entry-content p, .article-content p{
 	box-sizing: border-box;
 	font-size: 1.8rem;
-	background-color: #fafafa;
-	border-bottom: 5px solid #c8c8c8;
-	padding: 30px 5% 30px 5%;
 	margin-bottom: 20px;
 	line-height: 3.4rem;
 	text-align:justify;
 	color: #323232;
-	transition: margin-top 0.5s ease;
-	-ms-transition: margin-top 0.5s ease;
-	-moz-transition: margin-top 0.5s ease;
-	-webkit-transition: margin-top 0.5s ease;
+	padding: 30px 5% 0 5%;
+}
+.page .entry-content h2, .article-content h2{
+	padding: 30px 5% 0 5%;
+	font-size: 3.0rem;
+	font-weight: bold;
+}
+.page .entry-content p img, .article-content p img{
+	width: 100%;
 }
 #content-single,#article-single{
 	max-width: 1280px;
@@ -908,7 +918,7 @@ a.post-edit-link:hover{
 	-webkit-transition:margin 0.6s ease;
 	*/
 }
-.article_similaire li{
+.article_similaire li,.episode{
 	display: block;
 	width:20%;
 	float: left;
@@ -916,10 +926,15 @@ a.post-edit-link:hover{
 	position: relative;
 	height: 100px;
 }
-.article_similaire{
+.episode{
+	height: 150px;
+	width:25%;
+	margin-bottom: 60px;
+}
+.article_similaire,.episodes ul{
 	overflow: hidden;
 }
-.article_similaire li a{
+.article_similaire li a,.episode a{
 	width:100%;
 	display: block;
 	opacity: 0.65;
@@ -932,14 +947,18 @@ a.post-edit-link:hover{
 	-o-transition:opacity 0.3s ease;
 	transition:opacity 0.3s ease;
 }
-.article_similaire li a:hover{
+.episode a{
+	opacity: 0.8;
+	filter: alpha(opacity=80);
+}
+.article_similaire li a:hover,.episode a:hover{
 	opacity: 1.0;
 	filter: alpha(opacity=100);
 }
-.article_similaire li a h4{
+.article_similaire li a h4,.episode p{
 	position: absolute;
 	bottom: 0;
-	left: 100%;
+	left: 0;
 	background: #fafafa;
 	background: rgba(250,250,250,0.95);
 	color: #646464;
@@ -949,15 +968,25 @@ a.post-edit-link:hover{
 	font-size: 1.6rem;
 	font-family: 'Raleway', sans-serif;
 	border-right: 0.4em solid #c8c8c8;
+	z-index: 100;
 
-	-webkit-transition:left 0.3s ease;
-	-moz-transition:left 0.3s ease;
-	-ms-transition:left 0.3s ease;
-	-o-transition:left 0.3s ease;
-	transition:left 0.3s ease;
+	-webkit-transform: translate(-100%);
+	-moz-transform: translate(-100%);
+	-ms-transform: translate(-100%);
+	-o-transform: translate(-100%);
+	transform: translate(-100%);
+
+	-webkit-transition:-webkit-transform 0.3s ease;
+	-moz-transition:-moz-transform 0.3s ease;
+	-o-transition:-o-transform 0.3s ease;
+	transition:transform 0.3s ease;
 }
-.article_similaire li a:hover h4{
-	left: 0;
+.article_similaire li a:hover h4, .episode a:hover p{
+	-webkit-transform: translate(0);
+	-moz-transform: translate(0);
+	-ms-transform: translate(0);
+	-o-transform: translate(0);
+	transform: translate(0);
 }
 
 .home .type-post,
@@ -1032,10 +1061,15 @@ a.post-edit-link:hover{
 	height:0;
 	padding-bottom:14.0625%;
 	float: left;
+/*	transform:scale(1.002);
+	-o-transform:scale(1.002);
+	-ms-transform:scale(1.002);
+	-moz-transform:scale(1.002);
+	-webkit-transform:scale(1.002);*/
 }
 #content article img{
     transition: all .3s ease;
-    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
     -moz-transition: all .3s ease;
     -webkit-transition: all .3s ease;	
 }
@@ -1048,9 +1082,9 @@ a.post-edit-link:hover{
     -ms-transform: perspective(1000px) rotateX(0) translateY(0) translateZ(0);
     -webkit-transform: perspective(1000px) rotateX(0) translateY(0) translateZ(0);*/
     transition: transform .3s ease, opacity .3s ease;
-    -ms-transition: transform .3s ease, opacity .3s ease;
-    -moz-transition: transform .3s ease, opacity .3s ease;
-    -webkit-transition: transform .3s ease, opacity .3s ease;
+    -o-transition: -o-transform .3s ease, opacity .3s ease;
+    -moz-transition: -moz-transform .3s ease, opacity .3s ease;
+    -webkit-transition: -webkit-transform .3s ease, opacity .3s ease;
 }
 .hentry.past {
     opacity: 0;
@@ -1097,12 +1131,25 @@ a.post-edit-link:hover{
     -webkit-filter: grayscale(0%);
 }*/
 #content article:hover .article-content{
-	left:0;
+	-webkit-transform: translate(0);
+	-moz-transform: translate(0);
+	-ms-transform: translate(0);
+	-o-transform: translate(0);
+	transform: translate(0);
 }
 .article-content{
 	float: left;
 	width: 65%;
 	position: relative;
+	background-color: #fafafa;
+	border-bottom: 5px solid #c8c8c8;
+}
+#content-page .entry-content{
+	background-color: #fafafa;
+	border-bottom: 5px solid #c8c8c8 ;
+	padding-bottom: 30px;
+	overflow: hidden;
+	margin-bottom: 60px;
 }
 #content article:hover img{
 	transform: scale(0.8);
@@ -1115,7 +1162,7 @@ a.post-edit-link:hover{
 .archive .article-content{
 	position:absolute;
 	top:0;
-	left:100%;
+	left:0;
 	background:#fafafa;
 	/*background: rgba(250,250,250,0.95);*/
 	padding: 6%;
@@ -1124,11 +1171,18 @@ a.post-edit-link:hover{
 	height:100%;
 	z-index:20;
 	border-right: 0.5em solid #c8c8c8;
+	border-bottom: none;
 
-	-webkit-transition:left 0.3s ease;
-	-moz-transition:left 0.3s ease;
-	-o-transition:left 0.3s ease;
-	transition:left 0.3s ease;
+	-webkit-transform: translate(100%);
+	-moz-transform: translate(100%);
+	-ms-transform: translate(100%);
+	-o-transform: translate(100%);
+	transform: translate(100%);
+
+	-webkit-transition:-webkit-transform 0.3s ease;
+	-moz-transition:-moz-transform 0.3s ease;
+	-o-transition:-o-transform 0.3s ease;
+	transition:transform 0.3s ease;
 }
 .home .article-content:hover,
 .search .article-content:hover,
@@ -1567,8 +1621,24 @@ aside{
 	opacity:1;
 	filter: alpha(opacity=100);
 }
-.widget-container li:hover>a>h4{
-	left: 0;
+.wp-post-image{
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	-o-transform: scale(1);
+	transform: scale(1);
+
+	-webkit-transition: -webkit-transform .3s ease;
+	-moz-transition: -moz-transform .3s ease;
+	-o-transition: -o-transform .3s ease;
+	transition: transform .3s ease;
+}
+.widget-container li:hover img, .article_similaire li:hover img, .episode:hover img{
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
 }
 .widget-container li>a{
 	z-index: 2;
@@ -1582,7 +1652,7 @@ aside{
 .widget-container li>a>h4{
 	position: absolute;
 	bottom: 0;
-	left: 100%;
+	left: 0;
 	background: #fafafa;
 	background: rgba(250,250,250,0.95);
 	color: #646464;
@@ -1592,11 +1662,25 @@ aside{
 	font-size: 1.6rem;
 	font-family: 'Raleway', sans-serif;
 	border-right: 0.4em solid #c8c8c8;
+	z-index: 100;
 
-	-webkit-transition:left 0.3s ease;
-	-moz-transition:left 0.3s ease;
-	-o-transition:left 0.3s ease;
-	transition:left 0.3s ease;
+	-webkit-transform: translate(100%);
+	-moz-transform: translate(100%);
+	-ms-transform: translate(100%);
+	-o-transform: translate(100%);
+	transform: translate(100%);
+
+	-webkit-transition:-webkit-transform 0.3s ease;
+	-moz-transition:-moz-transform 0.3s ease;
+	-o-transition:-o-transform 0.3s ease;
+	transition:transform 0.3s ease;
+}
+.widget-container li:hover>a>h4{
+	-webkit-transform: translate(0);
+	-moz-transform: -moz-translate(0);
+	-ms-transform: translate(0);
+	-o-transform: translate(0);
+	transform: translate(0);
 }
 .widget_categories{
 	clear:both;
@@ -1872,116 +1956,6 @@ mark{
 		width:100%;
 	}
 }
-/*
-@media screen and (max-width: 1445px){
-	aside{
-		margin:0 auto;
-		margin-top:40px;
-		margin-left:0;
-		max-width:1032px;
-	}
-}
-@media screen and (max-width: 1050px){
-	#menu-menu>li>a{
-		width:100%;
-		float:none;
-		clear:both;
-		display:block;
-	}
-	#menu-menu>li>.sub-menu{
-		width:100%;
-	}
-	#menu-menu>li>ul>li{
-		width:50%;
-	}
-	#content, aside{
-		max-width:688px;
-		min-width:320px;
-	}
-	header>nav { max-width:100%; }
-	.cat-item{
-		width:45%;
-	}
-	.menu-menu-container{
-		margin-top:0;
-	}
-	.home #content>div, 
-	.search #content>div, 
-	.category #content>div, 
-	.archive #content>div{
-		margin-right:0;
-		margin-bottom:24px;
-	}
-	.home #content>div+div, 
-	.search #content>div+div, 
-	.category #content>div+div, 
-	.archive #content>div+div{
-		margin-right:24px;
-	}
-	#search {
-		clear: both;
-		text-align: center;
-		display: block;
-	}
-	.equipe p{
-		width:45%;
-	}
-}
-@media screen and (max-width: 705px){
-	#content, aside{
-		max-width:100%;
-		min-width:320px;
-	}
-	.home #content>div, 
-	.search #content>div, 
-	.category #content>div, 
-	.archive #content>div{
-		margin-right:0;
-		margin-left:0;
-		margin-bottom:24px;
-		width:100%;
-		min-width:320px;
-		height:auto;
-	}
-	.home #content>div>img, 
-	.search #content>div>img, 
-	.category #content>div>img, 
-	.archive #content>div>img{
-		width:100%;
-		min-width:320px;
-		height:auto;
-	}
-	.home #content>div+div, 
-	.search #content>div+div, 
-	.category #content>div+div, 
-	.archive #content>div+div{
-		margin-right:0;
-		margin-left:0;
-		margin-bottom:24px;
-		width:100%;
-		min-width:320px;
-		height:auto;
-	}
-	.home #content>div>img, 
-	.search #content>div>img, 
-	.category #content>div>img, 
-	.archive #content>div>img{
-		width:100%;
-		min-width:320px;
-		height:auto;
-	}
-	.dpe-flexible-posts>li>a{
-		width:100%;
-		height: auto;
-	}
-	.dpe-flexible-posts>li{
-		width: 31%;
-		height: auto;
-		margin-right: 6px;
-		margin-bottom: 6px;
-	}
-}
-*/
 
 
 
