--- a/style.css
+++ b/style.css
@@ -244,6 +244,9 @@ a, a:visited, a:active{
 a:hover{
 	color:#323232;
 }
+a:active{
+    text-shadow: none;
+}
 p{
 	color:#666;
 	font-size:1.8rem;
@@ -273,11 +276,14 @@ blockquote::after {
 	background:white;
 	border-bottom:10px solid lightgray;
 	z-index:99999999999;
-	text-align:center;
+	text-align:center
 
+/*
 	transition: transform .6s ease;
 	-webkit-transition: -webkit-transform .6s ease;
+*/
 }
+/*
 .loader_up{
 	transform:translateY(-100%);
 	-webkit-transform:translateY(-100%);
@@ -285,6 +291,7 @@ blockquote::after {
 	-ms-transform:translateY(-100%);
 	-o-transform:translateY(-100%);
 }
+*/
 #loader>p{
 	margin-top:30px;
 	font-family:'Raleway',sans-serif;
@@ -429,7 +436,7 @@ blockquote::after {
     padding: 5px 20px;
     float: left;
     font-size: 1.4rem;
-    color:#646464;
+    color:#646464
 /*    box-shadow:0 0 30px rgba(0,0,0,0.05) inset;*/
 }
 #search input[type="text"]:focus{
@@ -554,7 +561,7 @@ input[type=submit]:hover{
 }
 #menu-menu>li{
 	overflow: hidden;
-	float: right;
+	float: right
 	/*
 	width: 160px;
 	display: block;
@@ -588,6 +595,10 @@ input[type=submit]:hover{
 	-moz-transition:background .0s ease;
 	-webkit-transition:background .0s ease;
 }
+#menu-menu>li>a:active{
+    background:#969696;
+    color:#fff;
+}
 #menu-menu>li>ul>li{
 	overflow:visible !important;
 	display:inline-block;
@@ -603,7 +614,7 @@ input[type=submit]:hover{
 	background: #f0f0f0;
 	color:#646464;
 	font-size: 1.4rem;
-	border-top: 3px solid #c8c8c8;
+	border-top: 3px solid #c8c8c8
 	/*text-transform:uppercase;*/
 }
 #menu-menu>li>ul>li>a:hover{
@@ -661,12 +672,16 @@ input[type=submit]:hover{
 	-webkit-transition:all 0s ease;
 	transition:all 0s ease;
 }
+.sub-menu>li>a:active{
+    background: #969696;
+    color: #fff;
+}
 /* CORPS */
 #container{
 	width:100%;
 	/*text-align:center;*/
 	margin:0 auto;
-	margin-top: 60px;
+	margin-top: 60px
 	/*
 	border-left:5px solid #ddd;
 	border-right:5px solid #ddd;
@@ -803,7 +818,7 @@ h1>a{
 	filter: alpha(opacity=80);
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
     filter: gray; /* IE6-9 */
-    -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+    -webkit-filter: grayscale(100%) /* Chrome 19+, Safari 6+, Safari 6+ iOS */
 }
 .duree{
 	position: absolute;
@@ -920,7 +935,7 @@ a.post-edit-link:hover{
 #content-single>footer,#article-single>footer{
 	width: 65%;
 	margin: 60px 0;
-	float: left;
+	float: left
 	/*
 	transition:margin 0.6s ease;
 	-o-transition:margin 0.6s ease;
@@ -1089,7 +1104,7 @@ a.post-edit-link:hover{
 	width:25%;
 	height:0;
 	padding-bottom:14.0625%;
-	float: left;
+	float: left
 /*	transform:scale(1.002);
 	-o-transform:scale(1.002);
 	-ms-transform:scale(1.002);
@@ -1414,7 +1429,7 @@ h2.entry-title>a, #content-single>header h1, #content-page header h1, #article-s
 }
 .realLetter,.realLetter:before{
 	font-family:'Raleway' !important;
-	text-transform:uppercase;
+	text-transform:uppercase
 	/*font-size: 2.0rem !important;*/
 }
 
@@ -1440,7 +1455,7 @@ h2.entry-title>a, #content-single>header h1, #content-page header h1, #article-s
 	position: absolute;
 	bottom: 45px;
 	z-index: 2000;
-	z-index: 1;
+	z-index: 1
 	/*width: 180px;*/
 }
 
@@ -1799,14 +1814,18 @@ mark{
 	-webkit-transition:background .3s ease;
 }
 .pagination>a:hover {
-	background:white;
-	color:black;
+	background:#fff;
+	color:#323232;
 
 	transition:background .0s ease;
 	-o-transition:background .0s ease;
 	-ms-transition:background .0s ease;
 	-moz-transition:background .0s ease;
 	-webkit-transition:background .0s ease;
+}
+.pagination>a:active {
+    background:#646464;
+    color:#fff;
 }
 .pagination .pages,.pagination .current{
 	background:#f0f0f0;
