--- a/style.css
+++ b/style.css
@@ -436,12 +436,15 @@ blockquote::after {
     padding: 5px 20px;
     float: left;
     font-size: 1.4rem;
-    color:#646464
+    color:#646464;
+    opacity:0.7;
+        text-align:center
 /*    box-shadow:0 0 30px rgba(0,0,0,0.05) inset;*/
 }
 #search input[type="text"]:focus{
     outline:none;
     background:rgba(255,255,255,0.4);
+    opacity:1
 }
 #search input[type="submit"]{
     background: #c8c8c8; 
